manifest/objects/Picklist_Value_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickList_Field_API_Name__c</fullName>
        <label>PickList Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Mapping__c</fullName>
        <label>Value Mapping</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Picklist Value Mapping</label>
    <pluralLabel>Picklist Value Mappings</pluralLabel>
</CustomObject>